network-policies/api-allow.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: eshop
      component: sql-data
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: eshop
            component: catalog
