network-policies/deny-egress-from-middleware.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: middleware-deny-egress
spec:
  podSelector:
    matchLabels:
      app: eshop
      component: catalog
  policyTypes:
  - Egress
  egress: []
