network-policies/deny-egress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-egress
  namespace: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: 
  - to:
    - ipBlock:
        cidr: 191.238.8.26/32
