network-policies/limit-ingress-iprange.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow-ip
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress: 
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
